kqed_dev4/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Num_Inv_Stat_Available__c</fullName>
        <label># Inv Stat: Available</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Inventory_Status_mirror__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_Inv_Stat_Partial__c</fullName>
        <label># Inv Stat: Partial</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Inventory_Status_mirror__c</field>
            <operation>equals</operation>
            <value>Partially Available</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_Inv_Stat_Unavailable__c</fullName>
        <label># Inv Stat: Unavailable</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Inventory_Status_mirror__c</field>
            <operation>equals</operation>
            <value>Unavailable</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_Ship_Stat_Not_Shipped__c</fullName>
        <label># Ship Stat: Not Shipped</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Shipment_Status_mirror__c</field>
            <operation>equals</operation>
            <value>Not Shipped</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_Ship_Stat_Partial__c</fullName>
        <label># Ship Stat: Partial</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Shipment_Status_mirror__c</field>
            <operation>equals</operation>
            <value>Partially Shipped</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_Ship_Stat_Shipped__c</fullName>
        <label># Ship Stat: Shipped</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Shipment_Status_mirror__c</field>
            <operation>equals</operation>
            <value>Shipped</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opp_Med_1__c</fullName>
        <description>There are several media types that Corp Support will be using web, tv radio print and events</description>
        <label>Opportunity Media Type 1</label>
        <picklist>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opp_Med_2__c</fullName>
        <description>Multiple media types within Corp Support..</description>
        <label>Opportunity Media Type 2</label>
        <picklist>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opp_Med_3__c</fullName>
        <label>Opportunity Media Type 3</label>
        <picklist>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Oppty_Related_Contact__c</fullName>
        <description>The contact associated to the opportunity/ask</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Proposal/Pledge</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number - DEPRECATED</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Gift_Type__c</fullName>
        <label>Override Gift Type</label>
        <picklist>
            <picklistValues>
                <fullName>Add Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejoin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade Reset</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Giving_Stage__c</fullName>
        <formula>TEXT(Recurring_Donation_Opportunity__r.StageName)</formula>
        <label>Parent Giving Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Method_Description__c</fullName>
        <label>Payment Method Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Previous_Year_Amount__c</fullName>
        <formula>IF( YEAR( CloseDate ) = YEAR(TODAY()) - 1 , Amount , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous Year Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Probability_Qual__c</fullName>
        <label>Probability (Qual)</label>
        <picklist>
            <picklistValues>
                <fullName>Likely / As expected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possible / Delayed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlikely / Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stewardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matching Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Projected_Gift_Date__c</fullName>
        <label>Projected Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Push_Counter__c</fullName>
        <description>This field tracks many times an Opportunity has been pushed from month to month</description>
        <inlineHelpText>This field tracks many times an Opportunity has been pushed from month to month</inlineHelpText>
        <label>Push Counter</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recipient_Apartment_Number__c</fullName>
        <label>Recipient Apartment Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_City__c</fullName>
        <label>Recipient City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Country__c</fullName>
        <label>Recipient Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Extra_Line__c</fullName>
        <label>Recipient Extra Line</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_First_Name__c</fullName>
        <label>Recipient First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Last_Name__c</fullName>
        <label>Recipient Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_State__c</fullName>
        <label>Recipient State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Street_Name__c</fullName>
        <label>Recipient Street Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Street_Number__c</fullName>
        <label>Recipient Street Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Zip_Code__c</fullName>
        <label>Recipient Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Donation_Opportunity__c</fullName>
        <label>Parent Giving</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Giving Installments</relationshipLabel>
        <relationshipName>Giving_Installments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Refund_Type__c</fullName>
        <label>Refund Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Refund</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Refused_Reason__c</fullName>
        <label>Refused Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Cannot Afford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hung up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Commitment Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supports Other non-profits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WBUR 90.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t get premium/response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel 11 or Channel 36</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unemployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refuses all telesales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moving out of area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>can&apos;t receive signal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supports Auction Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change to Add gift to Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gave Already</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropped from Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refused to give a Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropped</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reminder_Sent_Date__c</fullName>
        <description>The date the reminder for this gift was pulled.</description>
        <inlineHelpText>Date indicates when the reminder for the gift was sent.</inlineHelpText>
        <label>Reminder_Sent_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reminder_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox indicating the reminder for this pledge/payment has been sent.</description>
        <inlineHelpText>If checked the reminder for this gift has been sent.</inlineHelpText>
        <label>Reminder Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remove_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System will delete all pledges with stage Solicited and gift date is older than 3 months.</description>
        <label>Remove Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Response_Code__c</fullName>
        <label>Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Mechanism__c</fullName>
        <label>Response Mechanism</label>
        <picklist>
            <picklistValues>
                <fullName>Call Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Coupon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QC Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telesale Pledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tickets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Renew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcast email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call from account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call to account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email from account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email to account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax from account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax to account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Retail PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hand-Delivered to Station</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet message from account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet message to account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invitation sent to account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Response_Message__c</fullName>
        <label>Response Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Restricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revenue_Date__c</fullName>
        <label>Revenue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC_GIVING_NUMBER__c</fullName>
        <displayFormat>G{000000000}</displayFormat>
        <label>SFDC GIVING NUMBER</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SFDC_Opportunity_ID__c</fullName>
        <description>Unique Opportunity ID to pass as an Alt ID to Team Approach, will allow us to map the Opportunity to the payment from TA</description>
        <inlineHelpText>Unique Salesforce ID which allows us to match the opportunity record on the contact or household to the payment</inlineHelpText>
        <label>SFDC Opportunity ID DELETE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Type__c</fullName>
        <label>Schedule Type</label>
        <picklist>
            <picklistValues>
                <fullName>Multiply By</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divide By</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipment_Status__c</fullName>
        <formula>IF( AND( Num_Ship_Stat_Partial__c =0,  Num_Ship_Stat_Shipped__c =0), &quot;Not Shipped&quot;,
IF( AND( Num_Ship_Stat_Not_Shipped__c = 0, Num_Ship_Stat_Partial__c = 0 ), &quot;Shipped&quot;,
&quot;Partially Shipped&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shipped, Not Shipped, Partially Shipped</inlineHelpText>
        <label>Shipment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solicitation_Type__c</fullName>
        <label>Solicitation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lapsed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejoin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_Code__c</fullName>
        <label>Source Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <label>Station</label>
        <picklist>
            <picklistValues>
                <fullName>KQED</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>KQED+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stretch_Amount__c</fullName>
        <description>The amount that a Prospect is likely to donate within the Moves Management process</description>
        <label>Projected Giving Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Support_Designation__c</fullName>
        <label>Support Designation</label>
        <picklist>
            <picklistValues>
                <fullName>Non-NPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only NPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio General</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Unspecified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio Classical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Television</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TA_Account_ID__c</fullName>
        <label>TA Account ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>CASE(
Schedule_Type__c ,
&quot;Multiply By&quot;, Installments__c * installment_amount__c ,
&quot;Divide By&quot;, installment_amount__c
,0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number - DEPRECATED</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pledge Payment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tribute_Description__c</fullName>
        <label>Tribute Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tribute_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tribute Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tribute_Name__c</fullName>
        <label>Tribute Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tribute_Type__c</fullName>
        <label>Tribute Type</label>
        <picklist>
            <picklistValues>
                <fullName>In Honor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memorial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WHCDB_Days_since_last_update_or_activity__c</fullName>
        <formula>if (today() - LastActivityDate &gt;=0,
min(today() - LastActivityDate , now() - LastModifiedDate ),now() - LastModifiedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since last update or activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>alt_transaction_id__c</fullName>
        <description>Convio Transaction ID</description>
        <externalId>true</externalId>
        <label>Convio Transaction ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>batch_number__c</fullName>
        <description>Batch Number</description>
        <inlineHelpText>Batch Number</inlineHelpText>
        <label>Batch Number</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>batch_process_count__c</fullName>
        <description>This field is used for Apex batch processing for post processing ETL information</description>
        <label>Batch Process Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bequest__c</fullName>
        <label>Planned Giving</label>
        <referenceTo>Bequest__c</referenceTo>
        <relationshipLabel>Giving</relationshipLabel>
        <relationshipName>Giving</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bulk_load__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ETL migration process</description>
        <label>bulk_load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>caller__c</fullName>
        <label>Caller</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>effort__c</fullName>
        <label>Effort</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fund__c</fullName>
        <inlineHelpText>Example Mr and Mrs Test Endowed Fund for the Humanities or Arts</inlineHelpText>
        <label>Fund</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>gift_kind__c</fullName>
        <label>Gift Kind</label>
        <picklist>
            <picklistValues>
                <fullName>One Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustaining Gift</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>gift_type__c</fullName>
        <label>Gift Type</label>
        <picklist>
            <picklistValues>
                <fullName>Add Gift</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Donation</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase</fullName>
                <color>#0B24BE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Rejoin</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
                <color>#B6E32E</color>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade Reset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matching Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade/Reset</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>installment_amount__c</fullName>
        <description>Installment Amount</description>
        <inlineHelpText>Installment Amount</inlineHelpText>
        <label>Installment Amount $</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>new_install_ment_date__c</fullName>
        <description>Installment date for recurring pledge</description>
        <inlineHelpText>Installment date for recurring pledge</inlineHelpText>
        <label>Installment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>new_installment_amount__c</fullName>
        <label>Installment Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>paid_amount__c</fullName>
        <description>Paid Amount</description>
        <inlineHelpText>Paid Amount</inlineHelpText>
        <label>Paid Amt $</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>payment_amount__c</fullName>
        <description>Payment Amount</description>
        <inlineHelpText>Payment Amount</inlineHelpText>
        <label>Payment Amount $</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>